# ezmsg-ssvep

./: README.md  setup.cfg  setup.py
examples/: ssvep_dashboard.py
ezmsg/ssvep/: spectralstats.py  ssvep.py  stimulus.py  visual_stim.py
ezmsg/ssvep/stimserver/: server.py  ssvep-stimulus.study.json
ezmsg/ssvep/stimserver/web/: script.js
notebooks/: offline_analysis.ipynb
