[metadata]
name = ezmsg-ssvep
version = attr:ezmsg.ssvep.__version__
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = SSVEP Tools/Utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/ezmsg-ssvep
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=3.2.4
    ezmsg-openbci>=1.1.0
    ezmsg-sigproc>=1.2.0
    ezmsg-panel
    imageio

[options.extras_require]
test = 
    pytest
    pytest-cov
